fixed gap issue

--- a/src/pages/details/detailsBanner/style.scss
+++ b/src/pages/details/detailsBanner/style.scss
@@ -161,7 +161,7 @@
       }
       .googleSearch {
         display: flex;
-        gap: 20px;
+        gap: 13px;
         cursor: pointer;
         align-items: center;
         svg {
